# mura-model-classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: infer.py  model.py
src/data/: datasets.py  transforms.py
src/mura_model_classifier/: __init__.py  infer.py  model.py  utils.py
src/train/: metrics.py
